--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,16 @@
 body{
     text-align: center;
     font-family: 'Arial', sans-serif;
+    color: black;
+}
+#container{
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: 1px solid purple;
+    margin: 0 auto;
+}
+#container h1{
+    font-size: 30px;
     color: pink;
 }
