--- a/css/estilos.css
+++ b/css/estilos.css
@@ -3,9 +3,21 @@ body{
     font-family: 'Arial', sans-serif;
     color: black;
 }
+#cabecera{
+    background-color: blueviolet;
+    color:white;
+    margin: 0;
+    padding: 0.5em;
+    font-weight: bold;
+}
+#cabecera #tagline{
+    font-weight: normal;
+    font-size: 0.8em;
+    padding: 0 0 0 1em;
+}
 #container{
     width: 70%;
-    padding: 1em;
+    padding: 0;
     text-align: left;
     border: 1px solid purple;
     margin: 0 auto;
