--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,6 @@
 body{
     text-align: center;
-    font-family: 'courier', sans-serif;
+    font-family: 'arial', sans-serif;
     color: black;
 }
 #cabecera{
